Changes made to subsections

--- a/app/views/choose/find-most.html
+++ b/app/views/choose/find-most.html
@@ -28,25 +28,28 @@
           <a href="../index.html">Overview</a>
         </li>
         <li>
-          <a href="/console-left/find-out.html">1. Find out</a>
+          <a href="../find-out.html">1. Find out</a>
         </li>
         <li class="active">
-          <a href="/console-left/choose">2. Choose</a>
+          <a href="../choose">2. Choose</a>
+        </li>
+        <li class="substage"><a href="../choose">Check what my visa options are</a></li>
+        <li class="substage"><a href="../choose/find-most" class="subactive">Find the most suitable option for my situation</a></li>
+        <li class="substage"><a href="../choose/prepare-for-application">Prepare for application</a></li>
+        <li>
+          <a href="../apply">3. Apply</a>
         </li>
         <li>
-          <a href="/console-left/apply">3. Apply</a>
+          <a href="../decide">4. Decide</a>
         </li>
         <li>
-          <a href="/console-left/decide">4. Decide</a>
+          <a href="../fulfil">5. Fulfil</a>
         </li>
         <li>
-          <a href="/console-left/fulfil">5. Fulfil</a>
+          <a href="../comply">6. Comply</a>
         </li>
         <li>
-          <a href="/console-left/comply">6. Comply</a>
-        </li>
-        <li>
-          <a href="/console-left/enforce">7. Enforce</a>
+          <a href="../enforce">7. Enforce</a>
         </li>
       </ul>
 
@@ -56,79 +59,85 @@
 
       <h2 class="heading-large">Choose</h2>
 
-      <!--Tab headings-->
-      <tab-check-what-my-visa-options-are>Check what my visa options are</tab-check-what-my-visa-options-are>
-      <tab-find-the-most-suitable-option-for-my-situation>Find the most suitable option for my situation</tab-find-the-most-suitable-option-for-my-situation>
-      <tab-prepare-for-application>Prepare for application</tab-prepare-for-application>
 
-      <tab-check-what-my-visa-options-are-content>
-        <h2> Check what my visa options are </h2>
+        <h3 class="heading-medium"> User Needs</h3>
 
-      <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions">
-        <div class="subsection-controls js-subsection-controls"></div>
-        <div class="subsection-wrapper">
-          <div class="js-subsection subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="understanding-agile-project-management">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Insight 1:</button>
-              </h2>
-              <!--Insight goes here-->
-              <p class="subsection__description">Some users read all the visas options and choose theirs by process of elimiation. It was not immediately obvious which visa was right for their specific trip</p>
-              <span class="subsection__icon"></span>
+        <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions">
+          <div class="subsection-controls js-subsection-controls"></div>
+          <div class="subsection-wrapper">
+            <div class="js-subsection subsection">
+              <div class="subsection__header">
+                <h2 class="subsection__title" id="understanding-agile-project-management">
+                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0"</button>
+                </h2>
+                <p class="subsection__description">find the visa that matches my situation so that I can feel confident I am applying for the right thing and avoid unnecessary effort</p>
+                <span class="subsection__icon"></span>
+              </div>
+              <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_0">
+                <ul class="subsection__list">
+                  <li class="subsection__list-item">Backup evidence 1</li>
+                  <li class="subsection__list-item">Backup evidence 2</li>
+                  <li class="subsection__list-item">Backup evidence 4</li>
+                  <li class="subsection__list-item">Backup evidence 5</li>
+                </ul>
+              </div>
             </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_0">
-              <h3 class="heading-medium">Evidence:</h3>
-              <!--Methodology and details of user research-->
-              <p>
-                <strong class="phase-tag ur">User research</strong>
-              </p>
-              <h4 class="heading-small">UKVI services on GOV.UK</h4>
-              <p>
-                <span style="font-weight:700;">Researchers:</span> Clare Ridd and Joe Coker
-                <br>
-                <span style="font-weight:700;">Participants:</span> 12 interviews with visit visa holders
-                <br>
-                <span style="font-weight:700;">Date:</span> October 2017
-              </p>
-              <!--Enter evidence here-->
-              <ul class="list list-bullet">
-                <li>"It was not so quickly to know which visa I needed… finally I got standard visa"]; "I looked at all the other visas and I did not fall into any of the categories … in the end I followed by instincts and went for the tourist visa" [R6-P12]</li>
-              </ul>
-              <p>This lead to an inefficient, time-consuming process and reduced confidence in having made the right choice. There was a sense of users looking for the application that matched their circumstance and knowing it when they saw it.</p>
-              <ul class="list list-bullet">
-                <li>"There were many options but this was the only option that was relevant to me" [R6-P10</li>
-                <li>"Once I saw the relevant application form it was more straightforward" [R6-P5].</li>
-              </ul>
-
-
-
-              <!--Link for sharepoint if transcripts or recordings-->
-              <p>
-                <a href="https://homeofficegovuk.sharepoint.com/:f:/s/DigitalServices/UKVIServices/EkKE9xrXJFlMgOuuL-SeOsEBGVVMiliydFWVsz8HOjIFLQ?e=2sNpnG"class="link">Transcripts</a>
-              </p>
-
-                <!--Context-->
-              <h3 class="heading-medium">Operational and Policy context:</h3>
-
-              <!--Impact-->
-              <h3 class="heading-medium">Impact:</h3>
-              <!--On individuals-->
-              <h4 class="heading-small">On individual users</h4>
-              <!--On performance measures-->
-              <h4 class="heading-small">On performance measures</h4>
-              <!--Recommendations-->
-              <h3 class="heading-medium">Recommendations:</h3>
-
+            <div class="subsection js-subsection">
+              <div class="subsection__header">
+                <h2 class="subsection__title" id="working-with-agile-methods">
+                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_1"</button>
+                </h2>
+                <p class="subsection__description">feel confident the visa I selected is correct so that I do not spend time worrying that my application will be rejected </p>
+                <span class="subsection__icon"></span>
+              </div>
+              <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_1">
+                <ul class="subsection__list">
+                  <li class="subsection__list-item">Backup evidence 1</li>
+                  <li class="subsection__list-item">Backup evidence 2</li>
+                  <li class="subsection__list-item">Backup evidence 4</li>
+                  <li class="subsection__list-item">Backup evidence 5</li>
+                </ul>
+              </div>
+              <div class="subsection js-subsection">
+                <div class="subsection__header">
+                  <h2 class="subsection__title" id="working-with-agile-methods">
+                    <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_1"</button>
+                  </h2>
+                  <p class="subsection__description">Know how long it will take to receive my decision so that I can plan when to submit my application in relation to my trip</p>
+                  <span class="subsection__icon"></span>
+                </div>
+                <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_1">
+                  <ul class="subsection__list">
+                    <li class="subsection__list-item">Backup evidence 1</li>
+                    <li class="subsection__list-item">Backup evidence 2</li>
+                    <li class="subsection__list-item">Backup evidence 4</li>
+                    <li class="subsection__list-item">Backup evidence 5</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="subsection js-subsection">
+                <div class="subsection__header">
+                  <h2 class="subsection__title" id="working-with-agile-methods">
+                    <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_1"</button>
+                  </h2>
+                  <p class="subsection__description">Know what will happen next before I make a selection so that I can judge which option during the application process is correct for what I want to do</p>
+                  <span class="subsection__icon"></span>
+                </div>
+                <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_1">
+                  <ul class="subsection__list">
+                    <li class="subsection__list-item">Backup evidence 1</li>
+                    <li class="subsection__list-item">Backup evidence 2</li>
+                    <li class="subsection__list-item">Backup evidence 4</li>
+                    <li class="subsection__list-item">Backup evidence 5</li>
+                  </ul>
+                </div>
             </div>
           </div>
         </div>
-
       </div>
-      </tab-check-what-my-visa-options-are-content>
 
-      <tab-find-the-most-suitable-option-for-my-situation>
 
-        <h2> Find the most suitable option for my situation</h2>
+
 
       <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions">
         <div class="subsection-controls js-subsection-controls"></div>
@@ -327,125 +336,6 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <tab-prepare-for-application>
-        <p>Prepare for application</p>
-
-      </tab-prepare-for-application>
-      <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions">
-        <div class="subsection-controls js-subsection-controls"></div>
-        <div class="subsection-wrapper">
-          <div class="js-subsection subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="understanding-agile-project-management">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Insight 1:</button>
-              </h2>
-              <!--Insight goes here-->
-              <p class="subsection__description">Many users stated that they had questions and concerns that they would like answered but found it difficult to get in contact with what they thought would be the relevant organisation</p>
-              <span class="subsection__icon"></span>
-            </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_0">
-              <h3 class="heading-medium">Evidence:</h3>
-              <!--Methodology and details of user research-->
-              <p>
-                <strong class="phase-tag ur">User research</strong>
-              </p>
-              <h4 class="heading-small">UKVI services on GOV.UK</h4>
-              <p>
-                <span style="font-weight:700;">Researchers:</span> Clare Ridd and Joe Coker
-                <br>
-                <span style="font-weight:700;">Participants:</span> 12 interviews with visit visa holders
-                <br>
-                <span style="font-weight:700;">Date:</span> October 2017
-              </p>
-              <!--Enter evidence here-->
-              <p>Some tried to contact the VAC centres or UKVI by phone to get advice</p>
-              <ul class="list list-bullet">
-                <li>"I remember struggling to be able to get any, if I had any questions or any concerns, not being able to have anyone to get through to" (R6 - P10)</li>
-                <li>"We try our best to contact Visa UK for some help, but it was impossible, when I visited the website" (R9 - P3)</li>
-                <li>"UK visa application centre in my country in my city. They helped advise me to put as much as possible. But for that I needed to come there personally. They didn't have any mobile phone or email address. That was another point which was very painful for me during the application" (R6-12)</li>
-                <li>"I think if there was a possibility of having a telephone helpline that is central that works, that would be really good" (R6 - P10)</li>
-                <li>"Open only from this time to this time and then there's a time difference to make the call" (R6 - P7)</li>
-              </ul>
-
-
-              <!--Link for sharepoint if transcripts or recordings-->
-              <p>
-                <a href="https://homeofficegovuk.sharepoint.com/:f:/s/DigitalServices/UKVIServices/EnPwZERZ1h1IgRUiPHSOYo8BnorWN-pfDDe8QhzPvBTEig?e=7FI0Wl"class="link">Transcripts</a>
-              </p>
-                <!--Context-->
-              <h3 class="heading-medium">Operational and Policy context:</h3>
-
-              <!--Impact-->
-              <h3 class="heading-medium">Impact:</h3>
-              <!--On individuals-->
-              <h4 class="heading-small">On individual users</h4>
-              <!--On performance measures-->
-              <h4 class="heading-small">On performance measures</h4>
-              <!--Recommendations-->
-              <h3 class="heading-medium">Recommendations:</h3>
-
-            </div>
-          </div>
-        </div>
-        <div class="subsection-wrapper">
-          <div class="js-subsection subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="understanding-agile-project-management">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Insight 1:</button>
-              </h2>
-              <!--Insight goes here-->
-              <p class="subsection__description">Users who managed to get in contact with UKVI by phone felt the call charges were excessive.</p>
-              <span class="subsection__icon"></span>
-            </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_0">
-              <h3 class="heading-medium">Evidence:</h3>
-              <!--Methodology and details of user research-->
-              <p>
-                <strong class="phase-tag ur">User research</strong>
-              </p>
-              <h4 class="heading-small">UKVI services on GOV.UK</h4>
-              <p>
-                <span style="font-weight:700;">Researchers:</span> Clare Ridd and Joe Coker
-                <br>
-                <span style="font-weight:700;">Participants:</span> 12 interviews with visit visa holders
-                <br>
-                <span style="font-weight:700;">Date:</span> October 2017
-              </p>
-              <!--Enter evidence here-->
-              <ul class="list list-bullet">
-                <li>"when we had doubts about a question or two we tried to call the support centre, the UK support centre or something like that, but it costs about £5 or something like that for questions to be answered. I don't think that is very…that's not the nicest thing" (R6 - P7)</li>
-                <li>"also it's already an international call, and then spending £6 or £10 for a minute I don't think that's very fair… They either deducted £5 or something, but it's very expensive to do that. I think it should have a free help centre or something like that" (R6 - P7)</li>
-              </ul>
-              <p>While others were had been unable to reach anyone expressed they would be willing to pay extra to speak with someone</p>
-              <ul class="list list-bullet">
-                <li>"But even if there was a bit added to the fee just to be able to cover costs of people being able to make a phone call, or to be able to check on progress" (R6-P10)</li>
-               </ul>
-
-
-              <!--Link for sharepoint if transcripts or recordings-->
-              <p>
-                <a href="https://homeofficegovuk.sharepoint.com/:f:/s/DigitalServices/UKVIServices/EnPwZERZ1h1IgRUiPHSOYo8BnorWN-pfDDe8QhzPvBTEig?e=7FI0Wl"class="link">Transcripts</a>
-              </p>
-                <!--Context-->
-              <h3 class="heading-medium">Operational and Policy context:</h3>
-
-              <!--Impact-->
-              <h3 class="heading-medium">Impact:</h3>
-              <!--On individuals-->
-              <h4 class="heading-small">On individual users</h4>
-              <!--On performance measures-->
-              <h4 class="heading-small">On performance measures</h4>
-              <!--Recommendations-->
-              <h3 class="heading-medium">Recommendations:</h3>
-
-            </div>
-          </div>
-        </div>
-
-
-
       </div>
     </div>
 
