--- a/app/views/decide/index.html
+++ b/app/views/decide/index.html
@@ -29,25 +29,25 @@
           <a href="../index.html">Overview</a>
         </li>
         <li>
-          <a href="/console-left/find-out.html">1. Find out</a>
+          <a href="../find-out.html">1. Find out</a>
         </li>
         <li>
-          <a href="/console-left/choose">2. Choose</a>
+          <a href="../choose">2. Choose</a>
         </li>
         <li>
-          <a href="/console-left/apply">3. Apply</a>
-        </li>
-        <li>
-          <a href="/console-left/decide">4. Decide</a>
+          <a href="../apply">3. Apply</a>
         </li>
         <li class="active">
-          <a href="/console-left/fulfil">5. Fulfil</a>
+          <a href="../decide">4. Decide</a>
         </li>
         <li>
-          <a href="/console-left/comply">6. Comply</a>
+          <a href="../fulfil">5. Fulfil</a>
         </li>
         <li>
-          <a href="/console-left/enforce">7. Enforce</a>
+          <a href="../comply">6. Comply</a>
+        </li>
+        <li>
+          <a href="../enforce">7. Enforce</a>
         </li>
       </ul>
 
@@ -55,8 +55,8 @@
 
     <div class="column-three-quarter left-border">
 
-      <h2 class="heading-large">Fulfil</h2>
-      <p>Content 123</p>
+      <h2 class="heading-large">Decide</h2>
+      <p>Content</p>
     </div>
 
   </div>
