--- a/app/views/find-out/index.html
+++ b/app/views/find-out/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block page_title %} Visit the UK - Research and insight {% endblock %} {% block proposition_header %}
+{% extends "layout.html" %} {% block page_title %} UKVI research and insight {% endblock %} {% block proposition_header %}
 <!-- blank to remove the proposition header -->
 {% endblock %} {% block header_class %}
 <!-- blank to remove the proposition header -->
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-<!-- Start of main console -->  
+<!-- Start of main console -->
   <div class="grid-row console">
 
     <div class="column-quarter">
@@ -28,26 +28,26 @@
         <li>
           <a href="../index.html">Overview</a>
         </li>
-        <li>
-          <a href="/console-left/find-out.html">1. Find out</a>
-        </li>
-        <li>
-          <a href="/console-left/choose">2. Choose</a>
-        </li>
-        <li>
-          <a href="/console-left/apply">3. Apply</a>
-        </li>
-        <li>
-          <a href="/console-left/decide">4. Decide</a>
-        </li>
-        <li>
-          <a href="/console-left/fulfil">5. Fulfil</a>
-        </li>
-        <li>
-          <a href="/console-left/comply">6. Comply</a>
-        </li>
         <li class="active">
-          <a href="/console-left/enforce">7. Enforce</a>
+          <a href="../find-out.html">1. Find out</a>
+        </li>
+        <li>
+          <a href="../choose">2. Choose</a>
+        </li>
+        <li>
+          <a href="../apply">3. Apply</a>
+        </li>
+        <li>
+          <a href="../decide">4. Decide</a>
+        </li>
+        <li>
+          <a href="../fulfil">5. Fulfil</a>
+        </li>
+        <li>
+          <a href="../comply">6. Comply</a>
+        </li>
+        <li>
+          <a href="../enforce">7. Enforce</a>
         </li>
       </ul>
 
@@ -55,7 +55,7 @@
 
     <div class="column-three-quarter left-border">
 
-      <h2 class="heading-large">Enforce</h2>
+      <h2 class="heading-large">Find out</h2>
       <p>Content</p>
     </div>
 
