--- a/app/views/apply/give-evidence.html
+++ b/app/views/apply/give-evidence.html
@@ -29,25 +29,30 @@
           <a href="../index.html">Overview</a>
         </li>
         <li>
-          <a href="/console-left/find-out.html">1. Find out</a>
+          <a href="../find-out">1. Find out</a>
         </li>
         <li>
-          <a href="/console-left/choose">2. Choose</a>
+          <a href="../choose">2. Choose</a>
         </li>
         <li class="active">
-          <a href="/console-left/apply">3. Apply</a>
+          <a href="../apply">3. Apply</a>
+        </li>
+        <li class="substage"><a href="../apply">Submit application</a></li>
+        <li class="substage"><a href="../apply/book-appointment">Book appointment</a></li>
+        <li class="substage"><a href="../apply/pay-fees">Pay fees</a></li>
+        <li class="substage"><a href="../apply/give-evidence" class="subactive">Give evidence and biometrics</a></li>
+        <li class="substage"><a href="../apply/recieve-confirmation">Receive confirmation</a></li>
+        <li>
+          <a href="../decide">4. Decide</a>
         </li>
         <li>
-          <a href="/console-left/decide">4. Decide</a>
+          <a href="../fulfil">5. Fulfil</a>
         </li>
         <li>
-          <a href="/console-left/fulfil">5. Fulfil</a>
+          <a href="../comply">6. Comply</a>
         </li>
         <li>
-          <a href="/console-left/comply">6. Comply</a>
-        </li>
-        <li>
-          <a href="/console-left/enforce">7. Enforce</a>
+          <a href="../enforce">7. Enforce</a>
         </li>
       </ul>
 
@@ -57,80 +62,6 @@
 
       <h2 class="heading-large">Apply</h2>
 
-      <style> .tabs > ol, .tabs > ul {
-  @extend %contain-floats;
-  list-style: none;
-  margin: 0 -16px;
-  padding: 0;
-  border-top: 1px solid $border-colour;
-
-  @include media(tablet) {
-    margin: 0;
-    border-top: 0;
-    border-bottom: 2px solid $border-colour;
-  }
-}
-
-.tabs > ul li, .tabs > ol li {
-  margin: 0;
-
-  @include media(tablet) {
-    float: left;
-    margin: 0 3px 0 0;
-  }
-}
-
-.tabs > ul li a, .tabs > ol li a {
-  display: block;
-  line-height: 3.5em;
-  padding: 0 16px;
-  text-align: left;
-  border-bottom: 1px solid $border-colour;
-
-  &:hover {
-    background-color: $highlight-colour;
-  }
-
-  @include media(tablet) {
-    border: solid 2px $white;
-    border-bottom: none;
-    float: left;
-    height: 2.25em;
-    line-height: 2.25em;
-    margin-bottom: -2px;
-    padding: 0 20px;
-  }
-}
-
-.tabs > ul li.active a, .tabs > ol li.active a {
-  background-color: $white;
-  border-bottom: 1px solid $border-colour;
-  color: $text-colour;
-  text-decoration: none;
-  pointer-events: none;
-  cursor: default;
-
-  &:hover {
-    color: inherit;
-  }
-
-  @include media(tablet) {
-    border: solid 2px $border-colour;
-    border-bottom: none;
-    padding-bottom: 2px;
-  }
-}
-</style>
-      <!-- Attempting to set up tabs, think need to add 'tabs' class-->
-      <div class="js-tabs tabs"> <!-- JS will add .tabs class -->
-        <ul class="list list-bullet">
-          <li><a class="tabs__link" href="#timeline">Timeline</a></li>
-          <li><a class="tabs__link" href="#application">Application</a></li>
-          <li><a class="tabs__link" href="#actions">Actions</a></li>
-        </ul>
-
-  <!--Tab 1 -->
-      <div id="timeline" class="tab-content">
 
       <h3 class="heading-medium">User Needs</h3>
 
@@ -264,40 +195,6 @@
       <div class="js-accordion-with-descriptions" data-module="accordion-with-descriptions">
         <div class="subsection-controls js-subsection-controls"></div>
         <div class="subsection-wrapper">
-          <div class="js-subsection subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="understanding-agile-project-management">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Insight 1:</button>
-              </h2>
-              <p class="subsection__description">Users became annoyed when they had to repeat all the same steps for each visa application to the UK.</p>
-              <span class="subsection__icon"></span>
-            </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_0">
-              <ul class="subsection__list">
-                <li class="subsection__list-item">Backup evidence 1</li>
-                <li class="subsection__list-item">Backup evidence 2</li>
-                <li class="subsection__list-item">Backup evidence 4</li>
-                <li class="subsection__list-item">Backup evidence 5</li>
-              </ul>
-            </div>
-          </div>
-          <div class="subsection js-subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="working-with-agile-methods">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_1">Insight 2:</button>
-              </h2>
-              <p class="subsection__description">Providing travel history is difficult and anxiety-inducing.</p>
-              <span class="subsection__icon"></span>
-            </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_1">
-              <ul class="subsection__list">
-                <li class="subsection__list-item">Backup evidence 1</li>
-                <li class="subsection__list-item">Backup evidence 2</li>
-                <li class="subsection__list-item">Backup evidence 4</li>
-                <li class="subsection__list-item">Backup evidence 5</li>
-              </ul>
-            </div>
-          </div>
           <div class="subsection js-subsection">
             <div class="subsection__header">
               <h2 class="subsection__title" id="governing-agile-services">
@@ -383,35 +280,13 @@
                 </p>
 
                 <img src="/public/images/pic.png" style="width:641px;">
-
-
-            </div>
-          </div>
-          <div class="subsection js-subsection">
-            <div class="subsection__header">
-              <h2 class="subsection__title" id="governing-agile-services">
-                <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_2">Insight 4:</button>
-              </h2>
-              <p class="subsection__description">Users have described instances of confusion and frustration when surprised with unexpected costs during the
-                application process.</p>
-              <span class="subsection__icon"></span>
-            </div>
-            <div class="subsection__content js-subsection-content js-hidden" id="subsection_content_2">
-              <ul class="subsection__list">
-                <li class="subsection__list-item">Backup evidence 1</li>
-                <li class="subsection__list-item">Backup evidence 2</li>
-                <li class="subsection__list-item">Backup evidence 4</li>
-                <li class="subsection__list-item">Backup evidence 5</li>
-              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div id="application" class="tab-content">
 
-    <p> Hello </>
 
   </div>
 
